spade-tests/src/snapshots/spade_tests__const_generics__method_exists_but_outside_trait_bound.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
impl X for bool {}
impl bool {
    fn test(self) {}
}
fn test<T: X>(it: T) {
    it.test()
}
fn main() {
    test(false)
}


error: X has no method `test`
  ┌─ testinput:7:5
  │
7 │     it.test()
  │     ^^^^^^^^^
